ensure popLeadingZeros handles edge cases